--- a/attand1.html
+++ b/attand1.html
@@ -44,7 +44,7 @@
                         
                     </ul>
                     <div class="mockup-holder" id="capture">
-                        <img class="mainFrame" src="img/balsibir-pf.jpeg" alt="">
+                        <img class="mainFrame" src="img/balshibir-pf.jpeg" alt="">
                         <div class="abs-div abs-div1-attand1">
                             <img class="cropped" src="img/placeholder2.png" alt="Image" />
                         </div>
@@ -61,7 +61,7 @@
 
                     <h3>Select Layout </h3>
                     <ul class="layout-box">
-                        <li class="active"><a href="attand1.html"><img src="./img/balsibir-pf.png" alt="Layout 1"></a></li>
+                        <li class="active"><a href="attand1.html"><img src="./img/balshibir-pf.png" alt="Layout 1"></a></li>
                         
                     </ul>
 
