--- a/attand1.html
+++ b/attand1.html
@@ -61,7 +61,7 @@
 
                     <h3>Select Layout </h3>
                     <ul class="layout-box">
-                        <li class="active"><a href="attand1.html"><img src="./img/balshibir-pf.png" alt="Layout 1"></a></li>
+                        <li class="active"><a href="attand1.html"><img src="./img/balshibir-pf.jpeg" alt="Layout 1"></a></li>
                         
                     </ul>
 
