--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
             <div class="mockup-box">
                 <div class="mockup-left">
-                    
+                    <h2> BALSHIBIR FRAME </h2>
                     <ul class="breadcrum">
                         <li><a>Home</a> <span>&#9658;</span></li>
-                       
+                        <li> BALSHIBIR FRAME </li>
                     </ul>
                     <div class="mockup-holder" id="capture">
                         <img class="mainFrame" src="img/balshibir-bf.jpeg" alt="">
