--- a/attand1.html
+++ b/attand1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BALSHIBIR 21</title>
+    <title>Hari-Baal Shibir</title>
 
     <!-- Stylesheets -->
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800&display=swap"
@@ -41,7 +41,7 @@
                     
                     <ul class="breadcrum">
                         <li><a>Home</a> <span>&#9658;</span></li>
-                        
+                        <li>Hari-Baal Shibir</li>
                     </ul>
                     <div class="mockup-holder" id="capture">
                         <img class="mainFrame" src="img/balshibir-pf.jpeg" alt="">
