--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <li> Hari-Baal Shibir</li>
                     </ul>
                     <div class="mockup-holder" id="capture">
-                        <img class="mainFrame" src="img/balshibir-bf.jpeg" alt="">
+                        <img class="mainFrame" src="img/HARI-B.png" alt="">
                         <div class="abs-div abs-div1">
                             <img class="cropped" src="img/placeholder2.png" alt="Image" />
                         </div>
@@ -46,14 +46,14 @@
 
                     <h3>Select Layout </h3>
                     <ul class="layout-box">
-                        <li class="active"><a href="index.html"><img src="./img/balshibir-bf.jpeg" alt="Layout 1"></a></li>
+                        <li class="active"><a href="index.html"><img src="./img/HARI-B.png" alt="Layout 1"></a></li>
                         
                         </li>
                     </ul>
 
                     <h3>Select Layout </h3>
                     <ul class="layout-box">
-                        <li><a href="attand1.html"><img src="./img/balshibir-pf.jpeg" alt="Layout 1"></a></li>
+                        <li><a href="attand1.html"><img src="./img/HARI-P.png" alt="Layout 1"></a></li>
                         
                     </ul>
 
