--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="mockup-box">
                 <div class="mockup-left">
-                    <h2> BALSHIBIR FRAME </h2>
+                    <h2> Hari-Baal Shibir Frame </h2>
                     <ul class="breadcrum">
                         <li><a>Home</a> <span>&#9658;</span></li>
                         <li> Hari-Baal Shibir</li>
