--- a/attand1.html
+++ b/attand1.html
@@ -46,7 +46,7 @@
                     <div class="mockup-holder" id="capture">
                         <img class="mainFrame" src="img/HARI-P.png" alt="">
                         <div class="abs-div abs-div1-attand1">
-                            <img class="cropped" src="img/placeholder2.png" alt="Image" />
+                            <img class="cropped" src="img/kids-bg.png" alt="Image" />
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="placeholder-box">
-                                <img id="placeholder" src="./img/placeholder2.png" alt="placeholder">
+                                <img id="placeholder" src="./img/kids-bg.png" alt="placeholder">
                             </div>
                         </div>
                         <div class="col-lg-12">
